// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view of labeled toggler Should return view with false value 1`] = `
<DocumentFragment>
  <div
    class="row   "
  >
    <p
      class="toggler-title "
    >
      Visible: 
    </p>
    <div
      class="toggler"
    >
      <div
        class="toggler-box"
      >
        <div
          class="toggler-box__item "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test view of labeled toggler Should return view with true value 1`] = `
<DocumentFragment>
  <div
    class="row   "
  >
    <p
      class="toggler-title toggler-title__visible"
    >
      Visible: 
    </p>
    <div
      class="toggler"
    >
      <div
        class="toggler-box"
      >
        <div
          class="toggler-box__item toggler-box__item_right"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
